# gdalgviz

./: .gitignore  LICENSE  README.md  dev-setup.ps1  gdalgviz.pyproj  pyproject.toml
.github/workflows/: main.yml
examples/: example.json  raster-overview.txt  raster.json  tee.json
gdalgviz/: __init__.py  cli.py  commands.py  gdalgviz.py  main.py  parser.py  pipeline.lark
tests/: test_cli.py  test_examples.py  test_parser.py
tests/reference/: test_expressions.json  test_gdal_pipeline_no_type.json  test_graph_and_node_attr.json  test_nested_input.json  test_nested_output.json  test_nested_output_custom_colors.json  test_raster_pipeline_with_bang.json  test_raster_pipeline_without_bang.json  test_vector_pipeline.json  test_vector_pipeline_quotes.json  test_vector_pipeline_uppercase_gdal.json  test_vertical_layout.json
